[package]
name = "rustc-worker"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
prost = "0.6"
prost-types = "0.6"
fnv = "1.0"

[build-dependencies]
prost-build = "0.6"
